--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_core:
   firebase_auth:
   google_sign_in: ^5.4.4
+  cloud_firestore:
+  flutter_launcher_icons:
   provider:
 
 dev_dependencies:
